@@ -41,7 +41,7 @@ Fixes
     empty AtomGroup (Issue #2848)
   * Fixed the DMSParser, allowing the creation of multiple segids sharing
     residues with identical resids (Issue #1387, PR #2872)
-  * Fixed Janin analysis (also filter CYSH) (Issue #2898)
+  * Fixed Janin analysis residue filtering (include CYSH) (Issue #2898)
 
 Enhancements
   * Refactored analysis.helanal into analysis.helix_analysis
@@ -65,7 +65,10 @@ Enhancements
   * Dead code removed from the TPR parser and increased test coverage (PR #2840)
   * TPR parser exposes the elements topology attribute (PR #2858, see Issue #2553)
   * Added `H5MDReader` to coordinate readers (Issue #762, PR #2787)
-
+  * Added new kwargs `select_remove` and `select_protein` to
+    analysis.dihedrals.Janin analysis to give user more fine grained control
+    over selections (PR #2899)
+ 
 Changes
   * deprecated NumPy type aliases have been replaced with their actual types
     (see upstream NumPy PR 14882), and our pytest configuration will raise an
